<resources>
    <string name="app_name">Meshini</string>
    <string name="get_started">Get started</string>
    <string name="email_phone_number">Email - phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password!</string>
    <string name="new_user_signup_now"><u>New user! signup now</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="activation_mail_sent_to">Activation mail sent to</string>
    <string name="resend">Resend</string>
    <string name="mobile_activation">Mobile Activation</string>
    <string name="enter_4_digit_code_sent_to">Enter 4-digit code sent to</string>
    <string name="login">Login</string>
    <string name="account_activated_successfully">Account activated successfully</string>
    <string name="tips">Tips:</string>
    <string name="tips_content">Guides offers lasts for only 5 min. then it will be declined automatically</string>
    <string name="next">Next</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="save_changes">Save changes</string>
    <string name="credit_or_debit_cards">Credit or Debit cards</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="trip_details">Trip Details</string>
    <string name="request_submitted_successfully">Request submitted successfully</string>
    <string name="our_guides_will_send_you_offers">Our guides will send you offers</string>
    <string name="add_your_credit_or_debit_card">Add your credit or debit card</string>
    <string name="pay">Pay</string>
    <string name="your_trips">Your Trips</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="welcome_message">visit many awesome places in many countries with our local experts</string>
    <string name="travel_like_a_native">Travel like a native</string>
    <string name="make_your_request_now">Make your request now</string>
    <string name="request_a_guide">Request a guide</string>
    <string name="choose_country_amp_language"><![CDATA[Choose country & language]]></string>
    <string name="car">car</string>
    <string name="bus">bus</string>
    <string name="put_your_trip_schedule">Put your trip schedule</string>
    <string name="make_your_trip_schedule">Make your trip schedule</string>
    <string name="pickup_location">Pickup location</string>
    <string name="tab_to_add_destination">Tap to add another destination</string>
    <string name="confirm_request">Confirm request</string>
    <string name="write_additional_notes">Write additional notes</string>
    <string name="type_your_message">Type your message</string>
    <string name="call_guide">Call Guide</string>
    <string name="start_chat">Start Chat</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="write_review_optional">Write Review (optional)</string>
    <string name="done">Done</string>
    <string name="enter_mail_phone_error_message">Please enter email or phone :)</string>
    <string name="enter_password_error_message">Please enter password :)</string>
    <string name="enter_e_mail_to_reset_your_account">Enter E-mail to reset your account</string>
    <string name="enter_first_name_error_message">please enter first name :)</string>
    <string name="enter_last_name_error_message">please enter last name :)</string>
    <string name="enter_mail_error_message">please enter email</string>
    <string name="enter_phone_error_message">please enter phone</string>
    <string name="invalid_mail_error_message">Invalid e_mail address</string>
    <string name="password_length_message_error">Password length must be more than 8 character</string>
    <string name="my_requests">My requests</string>
    <string name="select_city_error_message">please select city</string>
    <string name="activated_code_sent_successfully_message">Activation code was sent successfully</string>
    <string name="account_activated_successfully_message">Account has been activated successfully :)</string>
    <string name="invalid_code_message">Invalid activated code :(</string>
    <string name="password_confirmation_error_message">password confirmation must be exact like password</string>
    <string name="old_password">Old Password</string>
    <string name="no_data_error_message">No Data Entered</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="rating">Rating:</string>
    <string name="no_of_trips">No. of trips:</string>
    <string name="egp">EGP</string>
    <string name="date">Date</string>
    <string name="vehicle">Vehicle :</string>
    <string name="rate_us">Rate us</string>
    <string name="arabic">Arabic</string>
    <string name="complete_trip">complete Trip</string>
    <string name="trip_schedule">Trip Schedule</string>
    <string name="cash">cash</string>
    <string name="debit_credit_card">Debit / Credit Card</string>
    <string name="press_again">press again to exit</string>
    <string name="title_activity_maps">Map</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="destinations_list">Destinations list</string>
    <string name="active_trip">Active Trip</string>
    <string name="arrive_by">Arrive by</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyAZ0yLGIxJ6oP59MMa-4BW-KX2BUnM2oQo</string>
    <string name="select_this_location">Select this location</string>
    <string name="make_rate_message">please make rate</string>
    <string name="your_trip_has_been_started">Your Trip has been started</string>
    <string name="no_offers">No Offers</string>
    <string name="no_requests">no Requests</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="never_stop_exploring">Never Stop Exploring</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic_language">العربية</string>
    <string name="french">French</string>
    <string name="trekking">On foot</string>
    <string name="motorbike">motorbike</string>
    <string name="van">van</string>
    <string name="select_date_time_error_message">select start and end date</string>
    <string name="trip_date">Trip Date:</string>
    <string name="guide_name">Guide Name:</string>
    <string name="offers">Offers</string>
    <string name="server_error">server error</string>
    <string name="chat">chat</string>
    <string name="next_destination">Next destination:</string>
    <string name="select_vehicle_error_message">please select vehicle type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="program">Program</string>
    <string name="details">Details</string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <string name="about">About Company</string>
    <string name="egp_per_person"> per person</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="payment">Payment</string>
    <string name="book">Book</string>
    <string name="available_trips">Available Trips</string>
    <string name="guide">Guide</string>
    <string name="shared_trip">Shared trip</string>
    <string name="no_of_seats">No. of seats</string>
    <string name="no_shared_trips">No Shared Trips</string>
    <string name="my_shared_trips">My Shared Trips</string>
    <string name="search_for_trips">Search for trips</string>
    <string name="review">Review</string>
    <string name="please_upload_your_receipt">Please Upload your receipt</string>
    <string name="total">Total:</string>
    <string name="send_fees_to_the_following_number">Send fees to the following number</string>
    <string name="then_send_us_the_payment_receipt">Then send us the payment receipt</string>
    <string name="select_pictur_error_message">please select picture</string>
    <string name="pickup_time_error_message">please select pick up time</string>
    <string name="select_place_error_message">please select places</string>

</resources>
