<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/g1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/your_trip"
            android:checked="true"
            android:title="@string/your_trips" />
        <item
            android:id="@+id/my_requests"
            android:checked="true"
            android:title="@string/my_requests" />
        <item
            android:id="@+id/payment"
            android:checked="true"
            android:title="Payment" />

        <item
            android:id="@+id/help"
            android:checked="true"
            android:title="@string/help" />
        <item
            android:id="@+id/language"
            android:checked="true"
            android:title="Arabic" />

        <item
            android:id="@+id/rate"
            android:checked="true"
            android:title="Rate us" />

        <item
            android:id="@+id/logout"
            android:checked="true"
            android:title="@string/log_out" />
    </group>
</menu>