<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container_bg">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp102w"
        android:background="@drawable/text_view_border"
        android:padding="8dp"
        android:text="@string/travel_like_a_native"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp24_5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="@dimen/dp236w"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp46h"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp21_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp51h"
        android:text="@string/make_your_request_now"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp23_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/bt_request_guide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55h"
        android:background="@drawable/dialog_top_corner"
        android:text="@string/request_a_guide"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp18"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="callGuide"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>