<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg"
    tools:context=".view.activity.PymentActivity">
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16h"
        android:text="@string/app_name"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp15_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp23w"
        android:layout_height="@dimen/dp23h"
        android:layout_marginStart="@dimen/dp25w"
        app:srcCompat="@drawable/ic_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/payment"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp17"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/sp_city"
        android:layout_width="@dimen/dp271w"
        android:layout_height="@dimen/dp40h"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_sky_bg"
        android:popupBackground="@drawable/edit_text_shape"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="@+id/et_first_name"
        app:layout_constraintStart_toStartOf="@+id/et_first_name"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/sky_border"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="@dimen/dp18w"
        android:text="@string/first_name"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/text_color_black"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_city" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/sky_border"
        android:focusable="false"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="@dimen/dp18w"
        android:text="@string/email_address"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/text_color_black"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/sky_border"
        android:gravity="center_vertical"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="@dimen/dp18w"
        android:text="@string/phone"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/text_color_black"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Spinner
        android:id="@+id/sp_no_person"
        android:layout_width="@dimen/dp271w"
        android:layout_height="@dimen/dp40h"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_sky_bg"
        android:popupBackground="@drawable/edit_text_shape"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="@+id/et_first_name"
        app:layout_constraintStart_toStartOf="@+id/et_first_name"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40h"
        android:background="@color/text_color_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/book"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>