<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_bg"
        android:id="@+id/cl_root">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp143w"
            android:layout_height="@dimen/dp113h"
            android:layout_marginTop="@dimen/dp69h"
            app:srcCompat="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5h"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp30_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/et_password"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/sp12"
            android:textColorHint="@color/text_color_black"
            android:maxLines="1"
            android:paddingEnd="@dimen/dp18w"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24h"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/et_password_confirmation"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/sp12"
            android:textColorHint="@color/text_color_black"
            android:maxLines="1"
            android:paddingEnd="@dimen/dp18w"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32h"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55h"
            android:background="@color/sky_color"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp15_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="getDataFromView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>